--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/styled-components": "^5.1.9",
     "components": "^0.1.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled": "^1.0.0"
+    "styled": "^1.0.0",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
