--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.23.2",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
+    "next-images": "^1.7.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
